# Fyziks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_mingw.bat  build_visual_studio.bat  build_with_docs.bat  build_with_docs.sh
.cache/clangd/index/: ALCheck.cpp.F0ECE2558B9FD649.idx  ALCheck.hpp.6E0A3A8E6D23BEEB.idx  AlResource.cpp.8C032AD19C9449F6.idx  AlResource.hpp.C2B06405C786B3AB.idx  Api.h.19835FF3EA0C6396.idx  Api.h.22DFFF4F5822D729.idx  App.cpp.AD2B3D6607E251EB.idx  App.h.E5EC37E4FAA0BF73.idx  AudioDevice.cpp.DB7D69246C0597BC.idx  AudioDevice.hpp.8D75985C2E788498.idx  BlendMode.cpp.E378769C35893275.idx  BlendMode.hpp.07B69F9DE02619F8.idx  Body.h.CEFF77194C5E57B5.idx  CircleShape.cpp.7343DE9F578CF5E4.idx  CircleShape.hpp.EFBA600B2CBF8FD0.idx  Clipboard.cpp.47D907CD2D95A068.idx  Clipboard.hpp.72636002436EF25B.idx  ClipboardImpl.cpp.511858E1CB70D479.idx  ClipboardImpl.hpp.94F7C89FAB48A288.idx  ClipboardImpl.hpp.95951A327B6A714B.idx  Clock.cpp.BEB3658B4C561D24.idx  Clock.hpp.94DF2CB10C19BADD.idx  ClockImpl.cpp.B766B62DEB8AC577.idx  ClockImpl.hpp.E858CF2F2CA16122.idx  Color.cpp.66CB946EC2E953BF.idx  Color.hpp.B6F988FBF7743DF6.idx  Config.hpp.233BE005721F0ECF.idx  Context.cpp.506CE7CD77A513AE.idx  Context.hpp.E7705C4C4318D8F3.idx  ContextSettings.hpp.A72AD46D0D9CCA00.idx  ConvexShape.cpp.8E0A6EFEC628E025.idx  ConvexShape.hpp.9A9DBBE6D623D017.idx  Cursor.cpp.3E366C964AEF1341.idx  Cursor.hpp.166E2460ADBBDB58.idx  CursorImpl.cpp.48A94FA461BC8BC9.idx  CursorImpl.hpp.CBDAB37DCD0A8E25.idx  CursorImpl.hpp.D52CFEC4EBCB00BF.idx  Demo.cpp.103EEA8BD26B870A.idx  Display.cpp.BDFED89B68EE4892.idx  Display.hpp.E7C68873F6FD66D4.idx  (+260 more)
.github/workflows/: ci.yml  cmake.yml
Demo/: CMakeLists.txt
Demo/font/: ProggyClean.h
Demo/src/: App.cpp  App.h  BodyProperties.h  Demo.cpp  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Fyziks/: CMakeLists.txt
Fyziks/include/: Api.h  FyMath.h  Fyziks.h
Fyziks/include/Fyziks/: Api.h  Core.h  FyVec2.h  Fyziks.h
Fyziks/include/Fyziks/Math/: AABB.h  Body.h  Mat2x2.h  Misc.h  PolygonHelper.h  Rectangle.h  Vec2.h  Vec2f.h
Fyziks/include/Fyziks/Physics/: Body.h  Circle.h  Collision.h  CollisionManifold.h  ContactPair.h  Polygon.h  Rectangle.h  Triangle.h  World.h
Fyziks/include/Fyziks/World/: Body.h  Circle.h  Polygon.h  Rectangle.h  Triangle.h  World.h
Fyziks/src/: Body.cpp  Circle.cpp  Collision.cpp  FyMath.cpp  Polygon.cpp  Rectangle.cpp  Triangle.cpp  Vec2.cpp  World.cpp
Fyziks/src/Math/: Body.cpp  PolygonHelper.cpp
Fyziks/src/Physics/: Body.cpp  Collision.cpp  World.cpp
